Fix header gap
Was bothering me that there was barely a gap or padding in header,
had to fix that

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,7 +103,8 @@ img {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 2fr;
-  padding: 10px 70px 0px 20px;
+  padding: 10px 70px 10px 20px;
+  gap:  25px;
 }
 
 .search {
@@ -131,7 +132,7 @@ img {
   display: grid;
   grid-template-columns: 3fr 1fr;
   padding: 30px 40px 20px;
-  row-gap: 30px;
+  row-gap: 25px;
 }
 
 .projects {
@@ -266,7 +267,7 @@ img {
 .projects-main>div {
   background-color: white;
   border-left: solid orange 10px;
-  padding: 40px 30px 20px;
+  padding: 30px 20px 10px;
   border-radius: 10px 10px;
   display: grid;
   grid-template-columns: 1fr;
@@ -326,7 +327,7 @@ img {
 
 .trending-main {
   background-color: white;
-  gap: 30px;
+  gap: 20px;
   padding: 20px 10px;
   border-radius: 10px 10px;
   color: black;
